Modified form grid css to fix issues with negative numbers overflowing the space.

--- a/demo.css
+++ b/demo.css
@@ -1,22 +1,21 @@
-
-#demo_container{
+#demo_container {
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
 
 }
 
-#canvas_container{
+#canvas_container {
     max-width: 640px;
     width: 100%;
 }
 
-#canvas_container > canvas{
-    border: .1rem solid blue;  
-    padding: .5rem;  
+#canvas_container>canvas {
+    border: .1rem solid blue;
+    padding: .5rem;
 }
 
-#demo_container form{
+#demo_container form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: start;
@@ -27,26 +26,27 @@
     margin: 1rem;
 }
 
-#demo_container form label{
+#demo_container form label {
     grid-column-start: span 2;
 }
 
-#demo_container button{
+#demo_container button {
     grid-row: span 2;
 }
 
-#demo_container output{
+#demo_container output {
     justify-self: center;
 }
 
 /* expand for larger screens */
-@media screen and (min-width: 425px) {
-   #demo_container form{
+@media screen and (min-width: 475px) {
+    #demo_container form {
+        max-width: 25rem;
         grid-template-columns:
-            10rem 10rem auto;
-   }
+            10rem 10rem 5rem;
+    }
 
-   #demo_container form label{
-    grid-column-start: span 1;
-   }
+    #demo_container form label {
+        grid-column-start: span 1;
+    }
 }
